Issue #2046, allow inlinemediaobjects within tables to also obey alignment assigned by content, should only apply to images within tables

--- a/css/ccap-developmental-math.css
+++ b/css/ccap-developmental-math.css
@@ -4915,6 +4915,11 @@ div.table table td.text-align-center > .mediaobject > img,
 div.table table td.text-align-right > .mediaobject > img {
   display: inline-block;
 }
+div.table table td.text-align-left > .inlinemediaobject > img,
+div.table table td.text-align-center > .inlinemediaobject > img,
+div.table table td.text-align-right > .inlinemediaobject > img {
+  display: inline;
+}
 div[class="note"] div.table table th {
   background-color: #D7562C;
 }
