--- a/css/refactor/developmental-math-skeleton.less
+++ b/css/refactor/developmental-math-skeleton.less
@@ -13,6 +13,9 @@ div.table table td {
       line-height: 0px;
       > img { display: inline-block; }
     }
+    > .inlinemediaobject {
+      > img { display: inline; }
+    }
   }
 }
 
